# openapi-explorer

./: .gitignore  README.md
main/: Dockerfile  fiber.sqlite3  go.mod  go.sum  main.go
main/ai/: ai.go
main/handlers/: handlers.go
main/models/: models.go
main/openapi/: openapi.go
main/templates/: codeRunResult.templ  codeRunResult_templ.go  error.templ  error_templ.go  home.templ  home_templ.go  navbar.templ  navbar_templ.go  result.templ  result_templ.go
sandbox/: Dockerfile  pyproject.toml
sandbox/src/sandbox/: main.py
sandbox/src/sandbox/api/: api_key_utils.py  app.py  limiter.py  models.py  sandbox_utils.py
