[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastapi>=0.119.1",
    "fastapi-limiter>=0.1.6",
    "open-sandboxes>=0.2.1a0",
    "orjson>=3.11.3",
    "uvicorn>=0.38.0",
]

[tool.hatch.build.targets.wheel]
only-include = ["src/sandbox"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[project.scripts]
run-api = "sandbox.main:main"
